# Finlog

./: .gitignore  Cargo.toml  README.md  package-lock.json
i18n/locales/: en.toml  ru.toml  sv.toml  zh.toml
src/: lib.rs  main.rs
src/core/: mod.rs  spending.rs
src/server/: mod.rs  server.rs
src/storage/: json.rs  mod.rs
src/storage/config/: config.rs  mod.rs
src/utils/: color.rs  console.rs  error.rs  mod.rs
web/: .gitignore  index.html  package.json  shadow-cljs.edn
web/public/: index.html
web/public/css/: expenses.css  main.css  statistic.css
web/public/scss/: _base.scss  _components.scss  _header.scss  _layout.scss  _mixins.scss  _variables.scss  expenses.scss  main.scss  statistic.scss
web/public/scss/pages/: _expenses.scss  _main.scss  _statistic.scss
web/src/finlog/: api.cljs  core.cljs
web/src/finlog/components/: dashboard.cljs  expenses.cljs  header.cljs  statistics.cljs
web/style/: style.css
