[package]
name = "finlog"
version = "0.1.0"
edition = "2024"
authors = ["wakaranakattari <wakaranakattari@gmail.com>"]
description = "Personal expense tracker with CLI and web UI"
license = "MIT"
repository = "https://github.com/wakaranakattari/Finlog"
keywords = ["finance", "cli", "expenses"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = "0.4.45"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
